tests/ui/closures/2229_closure_analysis/by_value.stderr
error: First Pass analysis includes:
  --> $DIR/by_value.rs:19:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let p = t.0.0;
...  |
LL | |     };
   | |_____^
   |
note: Capturing t[(0, 0),Deref,(0, 0)] -> ByValue
  --> $DIR/by_value.rs:22:17
   |
LL |         let p = t.0.0;
   |                 ^^^^^
note: Capturing t[(1, 0)] -> Immutable
  --> $DIR/by_value.rs:25:29
   |
LL |         println!("{} {:?}", t.1, p);
   |                             ^^^

error: Min Capture analysis includes:
  --> $DIR/by_value.rs:19:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let p = t.0.0;
...  |
LL | |     };
   | |_____^
   |
note: Min Capture t[(0, 0)] -> ByValue
  --> $DIR/by_value.rs:22:17
   |
LL |         let p = t.0.0;
   |                 ^^^^^
note: Min Capture t[(1, 0)] -> Immutable
  --> $DIR/by_value.rs:25:29
   |
LL |         println!("{} {:?}", t.1, p);
   |                             ^^^

error: aborting due to 2 previous errors

